charts/vgx/website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vgx-website-svc
spec:
  selector:
    run: vgx-website-runner
  ports:
    - protocol: TCP
      port: 80
